Fix NPE in Select.queryDistinct() with lazy query execution enabled

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,14 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3664: [2.1.214] NulllPointerException in org.h2.command.query.Select.queryDistinct
+</li>
+<li>PR #3650: fix version number in the archives html table
+</li>
+<li>PR #3649: Basic implementation of materialized view
+</li>
+<li>Issue #3646: org.h2.mvstore.MVStoreException: Chunk metadata too long
+</li>
 <li>Issue #3645: The BITCOUNT function incorrectly counts BINARY/VARBINARY values of &gt;=16 bytes.
 </li>
 <li>Issue #3637: DB content massacred when opening a 2.1.214 DB with current master
