Read data types from CAST specifications passed as UNNEST parameters

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,14 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3693: Wrong result when intersecting unnested arrays
+</li>
+<li>PR #3691: GitHub Workflows security hardening
+</li>
+<li>PR #3688: Construct FormatTokenEnum.TOKENS during class initialization
+</li>
+<li>Issue #3682: MVStoreException at accountForRemovedPage
+</li>
 <li>Issue #3664: [2.1.214] NulllPointerException in org.h2.command.query.Select.queryDistinct
 </li>
 <li>PR #3650: fix version number in the archives html table
