Test join conditions in Select.isEverything()

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3659: User-defined variable "sticky" if used in view with join
+</li>
 <li>Issue #3693: Wrong result when intersecting unnested arrays
 </li>
 <li>PR #3691: GitHub Workflows security hardening
