--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3701: CLOBs can cause ClassCastExceptions
+</li>
 <li>Issue #3698: MySQL mode show columns from table, if modificationMetaId changed between prepared and execute.
 Then error occurred.
 </li>
