Fix building of documentation

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -38,7 +38,7 @@ Then error occurred.
 </li>
 <li>Issue #3682: MVStoreException at accountForRemovedPage
 </li>
-<li>Issue #3664: [2.1.214] NulllPointerException in org.h2.command.query.Select.queryDistinct
+<li>Issue #3664: [2.1.214] NullPointerException in org.h2.command.query.Select.queryDistinct
 </li>
 <li>PR #3650: fix version number in the archives html table
 </li>
