Fix NPEs caused by unexpected literals in Parser

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,10 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3580: TestCrashAPI: NPE in ParserUtil.getTokenType() (called by Parser.readIfDataType1())
+</li>
+<li>PR #3709: Update copyright years and fix building of documentation
+</li>
 <li>Issue #3701: CLOBs can cause ClassCastExceptions
 </li>
 <li>Issue #3698: MySQL mode show columns from table, if modificationMetaId changed between prepared and execute.
