Determine precision and scale of quotient in smarter way

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,10 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3731: Division result exceeds numeric precision constraint
+</li>
+<li>PR #3718: Add test coverage for JDK 17
+</li>
 <li>Issue #3580: TestCrashAPI: NPE in ParserUtil.getTokenType() (called by Parser.readIfDataType1())
 </li>
 <li>PR #3709: Update copyright years and fix building of documentation
