Improve support of time values in FORMATDATETIME function

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,18 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3757: FORMATDATETIME function doesn't handle time with time zone properly
+</li>
+<li>PR #3756: Limit the row list allocation based on the row count
+</li>
+<li>PR #3753: Add missing NEWSEQUENTIALID function in MSSQLServer mode
+</li>
+<li>Issue #3730: FILE_READ from JAR filesystem on classpath results in file of length 0
+</li>
+<li>PR #3749: Fix min/max description for sequences
+</li>
+<li>PR #3739: Fix count(*) for linked table to Oracle
+</li>
 <li>Issue #3731: Division result exceeds numeric precision constraint
 </li>
 <li>PR #3718: Add test coverage for JDK 17
