Restore support of PostgreSQL-style sequence generator start with option without WITH

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3675: H2 2.x cannot read PostgreSQL-style sequence generator start with option without WITH keyword
+</li>
 <li>Issue #3757: FORMATDATETIME function doesn't handle time with time zone properly
 </li>
 <li>PR #3756: Limit the row list allocation based on the row count
