Round down fractional seconds in SYSDATE

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3705: Oracle DATE type: milliseconds (second fractions) rounded in H2 but truncated in Oracle (fixed in SYSDATE only)
+</li>
 <li>Issue #3642: AssertionError in mvstore.FileStore.serializeAndStore
 </li>
 <li>Issue #3675: H2 2.x cannot read PostgreSQL-style sequence generator start with option without WITH keyword
