Adjust TestFunctions.testCompatibilityDateTime() and remove duplicate test

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>PR #3761: LAST_DAY function and other changes
+</li>
 <li>Issue #3705: Oracle DATE type: milliseconds (second fractions) rounded in H2 but truncated in Oracle (fixed in SYSDATE only)
 </li>
 <li>Issue #3642: AssertionError in mvstore.FileStore.serializeAndStore
