--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,10 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>PR #3791: Formatted cast of datetimes to/from character strings
+</li>
+<li>Issue #3785: CSVRead: Fails to translate empty Numbers, when cells are quoted
+</li>
 <li>Issue #3762: Comparison predicates with row values don't create index conditions
 </li>
 <li>PR #3761: LAST_DAY function and other changes
