--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,12 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>PR #3811: BTRIM function, octal and binary literals and other changes
+</li>
+<li>Issue #352: In comparison text values are converted to INT even when they should be converted to BIGINT
+</li>
+<li>PR #3797: MSSQL mode: Discard table hints on plain UPDATE statements
+</li>
 <li>PR #3791: Formatted cast of datetimes to/from character strings
 </li>
 <li>Issue #3785: CSVRead: Fails to translate empty Numbers, when cells are quoted
