--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>PR #3812: UNIQUE null treatment
+</li>
 <li>PR #3811: BTRIM function, octal and binary literals and other changes
 </li>
 <li>Issue #352: In comparison text values are converted to INT even when they should be converted to BIGINT
