Formatting, update changelog

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,16 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>PR #3820: Add partial implementation of JSON simplified accessor
+</li>
+<li>PR #3818: Add support of underscores in numeric literals
+</li>
+<li>PR #3817: Add ANY_VALUE() aggregate function
+</li>
+<li>PR #3814: Fix regression in comparisons with infinities and NaNs
+</li>
+<li>Issue #3040: System objectIds are recycled twice when CTE queries are executed.
+</li>
 <li>PR #3812: UNIQUE null treatment
 </li>
 <li>PR #3811: BTRIM function, octal and binary literals and other changes
