Add quantified comparison predicates with array

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #2671: ANY | SOME with array
+</li>
 <li>PR #3820: Add partial implementation of JSON simplified accessor
 </li>
 <li>PR #3818: Add support of underscores in numeric literals
