Address review comments, update changelog

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,7 +21,11 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
-<li>Issue #2671: ANY | SOME with array
+<li>PR #3831: Add Oracle-style NOWAIT, WAIT n, and SKIP LOCKED to FOR UPDATE clause
+</li>
+<li>RP #3830: Fix time zone of time/timestamp with time zone AT LOCAL
+</li>
+<li>PR #3822 / Issue #2671: Add quantified comparison predicates with array
 </li>
 <li>PR #3820: Add partial implementation of JSON simplified accessor
 </li>
