--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,10 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>PR #3834: Increase database format version
+</li>
+<li>PR #3833: Disallow plain webAdminPassword values to force usage of hashes
+</li>
 <li>PR #3831: Add Oracle-style NOWAIT, WAIT n, and SKIP LOCKED to FOR UPDATE clause
 </li>
 <li>RP #3830: Fix time zone of time/timestamp with time zone AT LOCAL
