--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,12 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Nothing yet...
+</li>
+</ul>
+
+<h2>Version 2.2.220 (2023-07-04)</h2>
+<ul>
 <li>PR #3834: Increase database format version
 </li>
 <li>PR #3833: Disallow plain webAdminPassword values to force usage of hashes
