--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -33,7 +33,7 @@ Change Log
 </li>
 <li>PR #3831: Add Oracle-style NOWAIT, WAIT n, and SKIP LOCKED to FOR UPDATE clause
 </li>
-<li>RP #3830: Fix time zone of time/timestamp with time zone AT LOCAL
+<li>PR #3830: Fix time zone of time/timestamp with time zone AT LOCAL
 </li>
 <li>PR #3822 / Issue #2671: Add quantified comparison predicates with array
 </li>
