Reject invalid trace levels to avoid obscure exceptions during logging

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,7 +21,17 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
-<li>Nothing yet...
+<li>Issue #3855: StackOverflowError when using TRACE_LEVEL_SYSTEM_OUT=4
+</li>
+<li>PR #3854: Fix issues with newer JVMs
+</li>
+<li>PR #3851: Remove lift configuration
+</li>
+<li>PR #3847: Fix the NullPointerException caused by accessing 'user' after the session has been closed
+</li>
+<li>PR #3846: Make DB_CLOSE_ON_EXIT safer
+</li>
+<li>PR #3842: Adds support of quotedNulls in CSV handling
 </li>
 </ul>
 
