Make GREATEST and LEAST compliant with the SQL Standard

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,12 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3089: GREATEST and LEAST aren't fully compliant with the SQL Standard
+</li>
+<li>PR #3861: Improve SET EXCLUSIVE 2 and use stable time source for timeout exceptions
+</li>
+<li>PR #3859: Fix conversion of PK columns to identity columns
+</li>
 <li>Issue #3855: StackOverflowError when using TRACE_LEVEL_SYSTEM_OUT=4
 </li>
 <li>PR #3854: Fix issues with newer JVMs
