--- a/h2/src/docsrc/html/features.html
+++ b/h2/src/docsrc/html/features.html
@@ -887,6 +887,7 @@ It means a NULL value may be specified for this column in INSERT command and it 
 </li><li>Attempt to reference a non-unique set of columns from a referential constraint
 will create an UNIQUE constraint on them automatically.
 </li><li>Unsafe comparison operators between numeric and boolean values are allowed.
+</li><li>GREATEST and LEAST ignore NULL values by default.
 </li><li>IDENTITY() and SCOPE_IDENTITY() are supported, but both are implemented like SCOPE_IDENTITY()
 </li><li>SYSDATE, SYSTIMESTAMP, and TODAY are supported.
 </li></ul>
@@ -950,6 +951,7 @@ Do not change value of DATABASE_TO_LOWER and CASE_INSENSITIVE_IDENTIFIERS after 
 </li><li>Identifiers may be quoted using square brackets as in <code>[Test]</code>.
 </li><li>For unique indexes, <code>NULL</code> is distinct.
     That means only one row with <code>NULL</code> in one of the columns is allowed.
+</li><li>GREATEST and LEAST ignore NULL values by default.
 </li><li>Text can be concatenated using '+'.
 </li><li>Arguments of LOG() function are swapped.
 </li><li>MONEY data type is treated like NUMERIC(19, 4) data type. SMALLMONEY data type is treated like NUMERIC(10, 4)
@@ -1084,6 +1086,7 @@ Do not change value of DATABASE_TO_LOWER after creation of database.
     digits are not be truncated, but the value is rounded.
 </li><li>The system columns <code>ctid</code> and
     <code>oid</code> are supported.
+</li><li>GREATEST and LEAST ignore NULL values by default.
 </li><li>LOG(x) is base 10 in this mode.
 </li><li>REGEXP_REPLACE():
     <ul>
