Don't suggest compatibility syntax on parsing error

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #2665: Parser shouldn't suggest compatibility syntax elements on parsing error
+</li>
 <li>Issue #3089: GREATEST and LEAST aren't fully compliant with the SQL Standard
 </li>
 <li>PR #3861: Improve SET EXCLUSIVE 2 and use stable time source for timeout exceptions
