--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,10 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>RP #3865: Add possibility to enable virtual worker threads in TCP, Web, and PG servers on Java 21+
+</li>
+<li>PR #3864: Improve performance of TCP client driver when it is used from virtual threads
+</li>
 <li>Issue #2665: Parser shouldn't suggest compatibility syntax elements on parsing error
 </li>
 <li>Issue #3089: GREATEST and LEAST aren't fully compliant with the SQL Standard
