--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3868: INFORMATION_SCHEMA.SESSIONS.ISOLATION_LEVEL returns isolation level of the current session in all rows
+</li>
 <li>RP #3865: Add possibility to enable virtual worker threads in TCP, Web, and PG servers on Java 21+
 </li>
 <li>PR #3864: Improve performance of TCP client driver when it is used from virtual threads
