in preparation for release

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,14 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Nothing yet
+</li>
+</ul>
+
+<h2>Version 2.2.222 (2023-08-22)</h2>
+<ul>
+<li>Fixed race condition in MVStore causing database corruption &quot;File corrupted in chunk ###&quot;
+</li>
 <li>Issue #3868: INFORMATION_SCHEMA.SESSIONS.ISOLATION_LEVEL returns isolation level of the current session in all rows
 </li>
 <li>RP #3865: Add possibility to enable virtual worker threads in TCP, Web, and PG servers on Java 21+
