--- a/h2/src/docsrc/html/download-archive.html
+++ b/h2/src/docsrc/html/download-archive.html
@@ -28,6 +28,10 @@ Archive Downloads
 
 <table>
 <tbody>
+<tr><td>2.2.222</td>
+<td><a href="https://github.com/h2database/h2database/releases/download/version-2.2.222/h2-setup-2023-08-22.exe">Windows Installer</a></td>
+<td><a href="https://github.com/h2database/h2database/releases/download/version-2.2.222/h2-2023-08-22.zip">Platform-Independent Zip</a></td>
+</tr>
 <tr><td>2.2.220</td>
 <td><a href="https://github.com/h2database/h2database/releases/download/version-2.2.220/h2-setup-2023-07-04.exe">Windows Installer</a></td>
 <td><a href="https://github.com/h2database/h2database/releases/download/version-2.2.220/h2-2023-07-04.zip">Platform-Independent Zip</a></td>
