Require Java 11, merge META-INF/versions/9-10

--- a/h2/src/docsrc/html/installation.html
+++ b/h2/src/docsrc/html/installation.html
@@ -35,9 +35,8 @@ Other software most likely also works, but is not tested as much.
 </p>
 
 <h3>Database Engine</h3>
-<ul><li>Windows XP or Vista, Mac OS X, or Linux
-</li><li>Oracle Java 8 or newer
-</li><li>Recommended Windows file system: NTFS (FAT32 only supports files up to 4 GB)
+<ul><li>Windows, Mac OS X, or Linux
+</li><li>Java 11 or newer
 </li></ul>
 
 <h3>H2 Console</h3>
@@ -47,7 +46,7 @@ Other software most likely also works, but is not tested as much.
 <h2 id="supported_platforms">Supported Platforms</h2>
 <p>
 As this database is written in Java, it can run on many different platforms.
-It is tested with Java 8 and 11.
+It is tested with Java 11 and 17.
 All major operating systems (Windows, Mac OS X, Linux, ...) are supported.
 </p>
 
