Don't throw incorrect CONCURRENT_UPDATE_1 exceptions from MERGE INTO

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #2834: MERGE INTO fails with an error "Timeout trying to lock table"
+</li>
 <li>Issue #3883: Performance regression in 2.2.222
 </li>
 <li>PR #3879: Require Java 11
