--- a/h2/src/docsrc/html/tutorial.html
+++ b/h2/src/docsrc/html/tutorial.html
@@ -1260,7 +1260,7 @@ The result contains the columns <code>SCHEMA</code> (the schema name),
 <code>KEYS</code> (an array of objects).
 To join a table, use a join as in:
 <code>SELECT T.* FROM FT_SEARCH_DATA('Hello', 0, 0) FT, TEST T
-WHERE FT.TABLE='TEST' AND T.ID=FT.KEYS[0];</code>
+WHERE FT."TABLE"='TEST' AND T.ID=FT."KEYS"[1];</code>
 </p>
 <p>
 You can also call the index from within a Java application:
@@ -1320,7 +1320,7 @@ The result contains the columns <code>SCHEMA</code> (the schema name),
 <code>COLUMNS</code> (an array of column names),
 and <code>KEYS</code> (an array of objects). To join a table, use a join as in:
 <code>SELECT T.* FROM FTL_SEARCH_DATA('Hello', 0, 0) FT, TEST T
-WHERE FT.TABLE='TEST' AND T.ID=FT.KEYS[0];</code>
+WHERE FT."TABLE"='TEST' AND T.ID=FT."KEYS"[1];</code>
 </p>
 <p>
 You can also call the index from within a Java application:
