Fix incorrect implementation of MVSpatialIndex.getCost()

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,16 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3940: Wrong estimation of a query execution cost with spatial index
+</li>
+<li>Issue #3931: MVStoreTool -dump throws a NullPointerException or returns binary data
+</li>
+<li>Issue #3910: Small error in the tutorial regarding full text search
+</li>
+<li>PR #3915: Improving search by compound indexes
+</li>
+<li>RP #3893: Fixed unit test is support en_GB locale
+</li>
 <li>Issue #2834: MERGE INTO fails with an error "Timeout trying to lock table"
 </li>
 <li>Issue #3883: Performance regression in 2.2.222
