--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,10 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3950: JdbcSQLIntegrityConstraintViolationException: Unique index or primary key violation
+</li>
+<li>PR #3947: Compound index search fix
+</li>
 <li>Issue #3940: Wrong estimation of a query execution cost with spatial index
 </li>
 <li>Issue #3931: MVStoreTool -dump throws a NullPointerException or returns binary data
