Add DB_OBJECT_SIZE and DB_OBJECT_TOTAL_SIZE functions

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,10 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3968: Add possibility to get index size on disk
+</li>
+<li>Issue #3909: Maintenance taking too much resources since 2.2.222
+</li>
 <li>Issue #3950: JdbcSQLIntegrityConstraintViolationException: Unique index or primary key violation
 </li>
 <li>PR #3947: Compound index search fix
