Return information about local temporary tables where expected

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,10 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3972: Constraints of local temporary tables aren't listed in INFORMATION_SCHEMA
+</li>
+<li>PR #3973: Fix Tool.showUsage() for GUIConsole
+</li>
 <li>Issue #3968: Add possibility to get index size on disk
 </li>
 <li>Issue #3909: Maintenance taking too much resources since 2.2.222
