Don't include invisible columns into default insert column list

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,10 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3983: INVISIBLE columns should be ignored in INSERT statement without explicit column list
+</li>
+<li>Issue #3960: NullPointerException when executing batch insert
+</li>
 <li>Issue #3972: Constraints of local temporary tables aren't listed in INFORMATION_SCHEMA
 </li>
 <li>PR #3973: Fix Tool.showUsage() for GUIConsole
