--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #910: Common Table Expressions (CTE) inside WITH should have their own identifier scope
+</li>
 <li>Issue #3981: Unexpected result when using trigonometric functions
 </li>
 <li>Issue #3983: INVISIBLE columns should be ignored in INSERT statement without explicit column list
