--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,9 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #822: WITH clauses' column aliases are not maintained correctly when selecting from CTE from within a derived
+table
+</li>
 <li>Issue #910: Common Table Expressions (CTE) inside WITH should have their own identifier scope
 </li>
 <li>Issue #3981: Unexpected result when using trigonometric functions
