--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3987: Allow empty &lt;with column list&gt;
+</li>
 <li>Issue #822: WITH clauses' column aliases are not maintained correctly when selecting from CTE from within a derived
 table
 </li>
