Fix SQL nulls in JSON

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3966: Unable to insert null into a JSON column
+</li>
 <li>Issue #3554: Regression in 2.1.214 when joining 2 recursive CTE containing bind values
 </li>
 <li>PR #3989: Refactor CTE-related code and reduce recompilations
