Disallow trailing comma in select list

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,10 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3106: Trailing commas in SELECT are accepted by the parser
+</li>
+<li>PR #3992: Add IPv6 support to H2 Console
+</li>
 <li>Issue #3966: Unable to insert null into a JSON column
 </li>
 <li>Issue #3554: Regression in 2.1.214 when joining 2 recursive CTE containing bind values
