Return empty map from JdbcConnection.getTypeMap()

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,14 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #4010: org.h2.jdbc.JdbcConnection.getTypeMap() returns null
+</li>
+<li>PR #4007: Update pom.xml related to CVE-2024-1597
+</li>
+<li>Issue #3907: MvStoreTool unable to Repair() or Rollback() [2.1.214]
+</li>
+<li>RP #3997: Server-side batch execution for prepared statements
+</li>
 <li>Issue #3106: Trailing commas in SELECT are accepted by the parser
 </li>
 <li>PR #3992: Add IPv6 support to H2 Console
