Fix determination of UNNEST data types for array constructors with casted parameters

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,11 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #4033: Wrong array produced when using ARRAY_AGG() on UNNEST(ARRAY[CAST(? AS INT)]) expression
+in a PreparedStatement
+</li>
+<li>Issue #3909: Maintenance taking too much resources since 2.2.222
+</li>
 <li>Issue #4010: org.h2.jdbc.JdbcConnection.getTypeMap() returns null
 </li>
 <li>PR #4007: Update pom.xml related to CVE-2024-1597
