Fix SQL export of constraints with custom UNIQUE null treatment

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #4036: NULLS NOT DISTINCT constraint changed after column dropped
+</li>
 <li>Issue #4033: Wrong array produced when using ARRAY_AGG() on UNNEST(ARRAY[CAST(? AS INT)]) expression
 in a PreparedStatement
 </li>
