--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #701: An available index is never used for ordering, when the requested order is DESC
+</li>
 <li>Issue #4036: NULLS NOT DISTINCT constraint changed after column dropped
 </li>
 <li>Issue #4033: Wrong array produced when using ARRAY_AGG() on UNNEST(ARRAY[CAST(? AS INT)]) expression
