Allow duplicate query names in different WITH clauses

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,7 +21,9 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
-<li>Nothing yet
+<li>Issue #4088: BadGrammarException when the same alias is used within two different CTEs
+</li>
+<li>Issue #4079: [2.3.230] Regression in ORDER BY ... DESC on dates
 </li>
 </ul>
 
