Don't convert column names to upper case in TableLink

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -29,6 +29,8 @@ Change Log
 
 <h2>Version 2.3.230 (2024-07-15)</h2>
 <ul>
+<li>Issue #4091: Wrong case with linked table to postgresql
+</li>
 <li>Issue #2752: Fix for "double mark" error at database backup opening
 </li>
 <li>Issue #4052: Allow 0 as a valid chunk id
