Pass mapped columns to table filters of subqueries

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,18 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3945: Column not found in correlated subquery, when referencing outer column from LEFT JOIN .. ON clause
+</li>
+<li>Issue #4097: StackOverflowException when using multiple SELECT statements in one query (2.3.230)
+</li>
+<li>Issue #3982: Potential issue when using ROUND
+</li>
+<li>Issue #3894: Race condition causing stale data in query last result cache
+</li>
+<li>Issue #4075: infinite loop in compact
+</li>
+<li>Issue #4091: Wrong case with linked table to postgresql
+</li>
 <li>Issue #4088: BadGrammarException when the same alias is used within two different CTEs
 </li>
 <li>Issue #4079: [2.3.230] Regression in ORDER BY ... DESC on dates
