Add alter enum support.
Example:
```
ALTER TYPE enum_name ADD VALUE 'new_enum_value'
```

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,7 +21,7 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
-<li>Nothing yet
+<li>Issue #4111: ALTER TYPE name ADD VALUE new_enum_value is not supported
 </li>
 </ul>
 
