--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #4005: Add optional version to RANDOM_UUID function and generator of version 7 in addition to existing version 4
+</li>
 <li>Issue #3945: Column not found in correlated subquery, when referencing outer column from LEFT JOIN .. ON clause
 </li>
 <li>Issue #4097: StackOverflowException when using multiple SELECT statements in one query (2.3.230)
