--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #4116: Optimizer chooses wrong execution plan in some cases when index-sorted optimization is possible
+</li>
 <li>Issue #4114: Regression when using CAST expressions in ROW IN predicates
 </li>
 <li>Issue #4111: ALTER TYPE name ADD VALUE new_enum_value is not supported
