--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,10 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #4136: ArrayIndexOutOfBoundsException with compound index
+</li>
+<li>Issue #4124: java.lang.NullPointerException: Cannot invoke "String.equals(Object)" because "[0]" is null
+</li>
 <li>Issue #4116: Optimizer chooses wrong execution plan in some cases when index-sorted optimization is possible
 </li>
 <li>Issue #4114: Regression when using CAST expressions in ROW IN predicates
