Allow expressions without aliases in CTEs in Oracle compatibility mode

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #4139: Oracle compatibility mode: unexpected Column alias is not specified exception in CTE
+</li>
 <li>Issue #4136: ArrayIndexOutOfBoundsException with compound index
 </li>
 <li>Issue #4124: java.lang.NullPointerException: Cannot invoke "String.equals(Object)" because "[0]" is null
