Fix index-sorted optimization for queries with IN predicate

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #4144: [2.3.232] Regression in ORDER BY ... DESC with WHERE ... IN and OR clauses
+</li>
 <li>Issue #4139: Oracle compatibility mode: unexpected Column alias is not specified exception in CTE
 </li>
 <li>Issue #4136: ArrayIndexOutOfBoundsException with compound index
