--- a/h2/src/docsrc/html/cheatSheet.html
+++ b/h2/src/docsrc/html/cheatSheet.html
@@ -112,7 +112,7 @@ li {
     <a href="https://github.com/h2database/h2database">open source</a>,
     <a href="license.html">free to use and distribute</a>.
 </li><li><a href="https://h2database.com/html/download.html">Download</a>:
-    <a href="https://repo1.maven.org/maven2/com/h2database/h2/${version}/h2-${version}.jar" class="link">jar</a>,
+    <a href="https://repo.maven.apache.org/maven2/com/h2database/h2/${version}/h2-${version}.jar" class="link">jar</a>,
     <a href="${downloadRoot}/h2-setup-${versionDate}.exe" class="link">installer (Windows)</a>,
     <a href="${downloadRoot}/h2-${versionDate}.zip" class="link">zip</a>.
 </li><li>To start the
