--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,18 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #4263: Documentation: SET TRUNCATE_LARGE_LENGTH is broken
+</li>
+<li>Issue #4208: Lost update when attempting to atomically increment a value using SELECT FOR UPDATE
+</li>
+<li>PR #4133: DROP SYNONYM isn't dropping the synonym right away
+</li>
+<li>PR #4256: Support KANZI and BZIP2 in RunScript
+</li>
+<li>PR #4254: feat: direct recovery into a compressed SQL file using pipes
+</li>
+<li>Issue #4247: Compaction causes missing chunks and data loss
+</li>
 <li>Issue #4217: JdbcPreparedStatement ignores query fetch size
 </li>
 <li>Issue #4225: Incompatibility in FullTextLucene with Lucene version 10.x onward
