fix: change log

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>PR #4273: SHUTDOWN COMPACT: parallel map copy (¼ cores default, override with h2.compactThreads)
+</li>
 <li>Issue #4263: Documentation: SET TRUNCATE_LARGE_LENGTH is broken
 </li>
 <li>Issue #4208: Lost update when attempting to atomically increment a value using SELECT FOR UPDATE
