in preparation for a release

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,7 +21,14 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
-<li>PR #4273: SHUTDOWN COMPACT: parallel map copy (¼ cores default, override with h2.compactThreads)
+    <li>nothing here yet</li>
+</ul>
+
+<h2>Version 2.4.240 (2025-09-22)</h2>
+<ul>
+<li>PR #4273: SHUTDOWN COMPACT: parallel map copy (&frac14; cores default, override with h2.compactThreads)
+</li>
+<li>PR #4258: Fix compaction of encrypted databases
 </li>
 <li>Issue #4263: Documentation: SET TRUNCATE_LARGE_LENGTH is broken
 </li>
@@ -510,14 +517,6 @@ Then error occurred.
 <li>PR #3299: Remove useless StringBuilder.toString() call
 </li>
 <li>PR #3298: Delete unused sqlTypes array
-</li>
-</ul>
-
-<h2>Version 2.0.206 (2022-01-04)</h2>
-<ul>
-<li>Issue #3322: Create linked table fails when the table contains a Geometry with a data type specified
-</li>
-<li>Issue #3297: Unexpected GROUP BY results with indexed IGNORECASE column
 </li>
 </ul>
 
