--- a/h2/src/docsrc/html/download-archive.html
+++ b/h2/src/docsrc/html/download-archive.html
@@ -28,6 +28,10 @@ Archive Downloads
 
 <table>
 <tbody>
+<tr><td>2.2.232</td>
+<td><a href="https://github.com/h2database/h2database/releases/download/version-2.3.232/h2-setup-2024-08-11.exe">Windows Installer</a></td>
+<td><a href="https://github.com/h2database/h2database/releases/download/version-2.3.232/h2-2024-08-11.zip">Platform-Independent Zip</a></td>
+</tr>
 <tr><td>2.2.230</td>
 <td><a href="https://github.com/h2database/h2database/releases/download/version-2.3.230/h2-setup-2024-07-15.exe">Windows Installer</a></td>
 <td><a href="https://github.com/h2database/h2database/releases/download/version-2.3.230/h2-2024-07-15.zip">Platform-Independent Zip</a></td>
